Fix T72114 Overlays: Curves are not drawing anymore (objectmode)